Try to fix positioning on smaller devices

--- a/style.css
+++ b/style.css
@@ -191,6 +191,7 @@ ul {
     
     body {
         width: 100%;
+        position: absolute;
     }
     
     .header {
